# personal_website_code_old

./: .gitignore  CV.md  blog.md  css.hs  cvPDF.hs  danielbarter.md  home.md  makefile  mix.js  mix.md  personalwebsite.cabal  publickey.md  site.hs  solutions.md  stack.yaml  tableau.js  tableau.md  thesis_main.tex  toLive
CALGO/: array_sort.c
CALGO/binary_search_trees/: binary_search_tree.c  test.c
CALGO/max_binary_heap/: max_binary_heap.c  test.c
CALGO/overflow_test/: add_overflow_flag.asm  overflow_test.c
CALGO/sorting/: insertion_merge_sort.c  insertion_merge_sort_unboxed.c  max_binary_heap.c  sort_test.c
CLRSsolutions/: ch1.md  ch2.md  ch3.md
blog_notebooks/Niave_Bayes_classification_MNIST/: Niave_Bayes_Classification_MNIST.ipynb  Niave_Bayes_Classification_MNIST_MLE.ipynb
blog_notebooks/Niave_Bayes_classification_MNIST/mnistclean/: mnistclean.cabal
blog_notebooks/Niave_Bayes_classification_MNIST/mnistclean/app/: DataPath.hs  Main.hs  Parse.hs
blog_notebooks/metropolis/: metropolis.ipynb
blog_notebooks/mnist/: helm_mnist.ipynb
blog_notebooks/practice_data_sets/: fiji_quakes.ipynb
blog_notebooks/tensor_flow_practice/: K_mean_clustering.ipynb  (+1 more)
data/: index.html
html_templates/: basic.html  blog.html  default.html  mix_temp.html  nav_bar.html  post.html  tableau_temp.html
markdown/: home.md
posts/: 2016-01-29-BuildingTheSite.md  2016-01-29-TheBasics.md  2016-01-29-firstpost.md  2016-01-29-secondpost.md  2016-01-29-thebasics.md  2016-01-31-whatisamanifold.md  2016-02-01-thirdpost.md  2016-02-07-tangentspaces.md  2016-02-07-thetangentbundle.md  2016-02-21-thetangentbundle.md  2016-02-28-thetangentbundle.md
texCV/: danielbarter.tex
(+45 files in other folders)
