name:                personalwebsite
version:             0.1.0.0
synopsis:            personal website
description:         Please see README.md
homepage:            http://danielbarter.github.io
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2016 Daniel Barter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.*,
                       pandoc == 1.*,
                       containers == 0.*

executable cssgen
  main-is:             css.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       clay == 0.*


executable cvPDF
  main-is:            cvPDF.hs
  default-language:   Haskell2010
  build-depends:      base == 4.*,
                      pandoc == 1.*
