name:                mnistclean
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       DataPath,
                       Parse
  build-depends:       base,
                       bytestring,
                       attoparsec,
                       pretty
  default-language:    Haskell2010

